deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffeeshop-staging
  labels:
    app.kubernetes.io/part-of: coffeeshop
    environment: staging
